--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ h1 {
 .time-display {
     font-size: 4rem;
     font-weight: bold;
-    color: #ea66ac;
+    color: #3a006a;
     font-family: 'Courier New', monospace;
 }
 
@@ -100,15 +100,6 @@ h1 {
 .btn:disabled:hover {
     transform: none;
     box-shadow: none;
-}
-
-.pause {
-    background: #ff9800;
-    color: white;
-}
-
-.pause:hover {
-    background: #f57c00;
 }
 
 .add5 {
